# mmp_practicum_spring_2023

./: README.md
Seminars/Seminar 01/: Введение в нейросети. MLP. Инициализация сетей.ipynb
Seminars/Seminar 03/: Основы Pytorch.ipynb
Seminars/Seminar 05/: utils.py  Семантическая Сегментация.ipynb
Seminars/Seminar 07/: Языковые модели. Torchtext.ipynb
Seminars/Seminar 09/: Transformer модели. HuggingFace.ipynb
Seminars/Seminar 12/: CMakeLists.txt  Torch JIT + C++ API.ipynb  resnet.cpp  simple.cpp
Tasks/Task 01/: task_01.ipynb
Tasks/Task 02/: task_02.ipynb
Tasks/Task 03/: task_03.ipynb
